--- a/rakefile
+++ b/rakefile
@@ -12,10 +12,11 @@ BOOK		= "book/%n.html"
 YML_SRC		= FileList['src/*.yml']
 
 SITE_INDICES	= FileList['index_alpha.ham','index_type.ham'].pathmap("tmp/%p")
-SITE_STATIC	= FileList['static/*.ham']
+SITE_STATIC	= FileList['static/site/*.ham']
 SITE_OUT	= (YML_SRC).pathmap(SITE)
 
 BOOK_INDICES	= FileList['book.ham'].pathmap("tmp/%p")
+BOOK_STATIC	= FileList['static/book/*.ham']
 BOOK_OUT	= (YML_SRC).pathmap("book/%n.html")
 
 CLEAN.include('tmp/*')
@@ -41,7 +42,8 @@ end
 
 def mustache built, from, template
 	file built => from do
-          sh "mustache #{from} views/#{template}.tmpl > #{built}" unless uptodate?(built,from)
+          view = "views/#{template}.tmpl"
+          sh "mustache #{from} #{view} > #{built}" unless uptodate?(built,from) && uptodate?(built, view)
         end
 end
 
@@ -58,6 +60,12 @@ end
 SITE_STATIC.each do |from|
   built = from.pathmap(SITE)
   task :site => built
+  haml built, from
+end
+
+BOOK_STATIC.each do |from|
+  built = from.pathmap(BOOK)
+  task :book => built
   haml built, from
 end
 
